# irotate_active_slam

./: .gitignore  .gitmodules  3dgems.sh  CUSTOM_ROBOT.md  INSTALL.md  README.md  RESULTS.md  RUNNING.md  kill.sh  map.sh  models.sh  requirements.txt  results.ipynb  ros-req.sh  setup.sh
plant/: model.config  model.sdf  plant.dae
robotino_specific/robotino_msgs/: AnalogReadings.h  DigitalReadings.h  EncoderReadings.h  MotorReadings.h  PowerReadings.h  ResetOdometry.h  ResetOdometryRequest.h  ResetOdometryResponse.h  SetEncoderPosition.h  SetEncoderPositionRequest.h  SetEncoderPositionResponse.h
robotino_specific/robotino_msgs/msg/: DigitalReadings.msg  MotorReadings.msg  PowerReadings.msg
rtabmap-edited/: Memory.cpp  Rtabmap.cpp  Rtabmap_5d200a0.cpp
scripts/: back.sh  results-real-1st-paper.ipynb  results-real-2nd-paper.ipynb
src/: pause.py
src/active_slam/: CMakeLists.txt  package.xml
src/active_slam/include/: frontier_exploration.h  map_extract.h
src/active_slam/launch/: active_node.launch  frontier_exploration.launch  map_extract.launch
src/active_slam/msg/: AvailablePaths.msg  SinglePath.msg
src/active_slam/src/: frontier_backup.cpp  frontier_exploration.cpp  map_extract.cpp
src/active_slam/srv/: get_best_head.srv  get_best_path.srv  get_frontier_list.srv
src/actor_collisions/: CMakeLists.txt  actor_collisions.world  package.xml
src/actor_plugin/: ActorPlugin.cc  ActorPlugin.hh  CMakeLists.txt  README.md  package.xml
src/actor_plugin/world/: arena_RAL.world
src/camera_best_heading/: CMakeLists.txt  package.xml
src/camera_best_heading/include/: camera_best_heading.h
src/camera_best_heading/launch/: best_heading.launch
src/camera_best_heading/src/: camera_best_heading.cpp
src/encoder_node/: CMakeLists.txt  package.xml
src/pgm_map_creator/: CMakeLists.txt  LICENSE  README.md  package.xml
src/pid/: CHANGELOG.rst  CMakeLists.txt  contributors.txt  license.txt  package.xml
src/pid/cfg/: Pid.cfg
src/pid/include/pid/: PidConfig.h  controller.h  pid.h
src/pid/launch/: differential_drive_sim.launch  run_camera_rotation.launch  servo_sim.launch.backup  sim_time.launch
src/pid/src/: autotune.cpp  controller.cpp  pid.cpp  plant_sim.cpp  setpoint_node.cpp  sim_time.cpp
src/robotino_description/: CMakeLists.txt  package.xml
src/robotino_fsm/: CMakeLists.txt  package.xml
src/robotino_fsm/include/: robotino_fsm_node.h
src/robotino_fsm/launch/: robotino_fsm.launch
src/robotino_fsm/src/: robotino_fsm_node.cpp
src/robotino_gazebo_plugin/: CMakeLists.txt  package.xml
src/robotino_gazebo_plugin/include/robotino_gazebo_plugin/: robotino_cam_plugin.h  robotino_plugin.h
src/robotino_gazebo_plugin/src/: imu_body_republisher.py  imu_republish.py  robotino_camera_plugin.cpp  robotino_plugin.cpp
src/robotino_mpc/: CMakeLists.txt  package.xml
src/robotino_mpc/cfg/: NonLinearMPC.cfg  nmpc.yaml
src/robotino_mpc/include/: nlmpc.h
src/robotino_mpc/launch/: robotino_mpc.launch
src/robotino_mpc/solver_made_from_cpp/: CMakeLists.txt  README.md  nmpc_solver_setup.cpp
src/robotino_mpc/solver_made_from_cpp/qpoases/SRC/: MessageHandling.cpp
src/robotino_mpc/solver_made_from_cpp/solver/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c  nmpc_solver_setup
src/robotino_mpc/src/: nlmpc.cpp  nlmpc_node.cpp
src/robotino_msgs/: CMakeLists.txt  package.xml
src/robotino_msgs/msg/: AnalogReadings.msg  EncoderReadings.msg
src/robotino_msgs/srv/: ResetOdometry.srv  SetEncoderPosition.srv  SetGripperState.srv
src/robotino_node/: CMakeLists.txt  package.xml
src/robotino_node/include/: AnalogInputArrayROS.h  BumperROS.h  CameraROS.h  ComROS.h  DigitalInputArrayROS.h  DigitalOutputArrayROS.h  DistanceSensorArrayROS.h  EncoderInputROS.h  InitialPoseROS.h  LaserRangeFinderROS.h  MotorArrayROS.h  OdometryROS.h  OmniDriveROS.h  PowerManagementROS.h  RobotinoCameraNode.h  RobotinoLaserRangeFinderNode.h  RobotinoNode.h  RobotinoOdometryNode.h  transform.h
src/robotino_node/launch/: only_robotino_node.launch  robotino_node.launch  robotino_node.launch.save
src/robotino_node/src/: AnalogInputArrayROS.cpp  BumperROS.cpp  CameraROS.cpp  ComROS.cpp  DigitalInputArrayROS.cpp  DigitalOutputArrayROS.cpp  DistanceSensorArrayROS.cpp  EncoderInputROS.cpp  InitialPoseROS.cpp  LaserRangeFinderROS.cpp  MotorArrayROS.cpp  OdometryROS.cpp  OmniDriveROS.cpp  PowerManagementROS.cpp  RobotinoCameraNode.cpp  RobotinoLaserRangeFinderNode.cpp  RobotinoNode.cpp  RobotinoOdometryNode.cpp  robotino_camera_node.cpp  robotino_laserrangefinder_node.cpp  robotino_node.cpp  robotino_odometry_node.cpp
src/robotino_rest_node/: CMakeLists.txt  package.xml
src/robotino_rest_node/scripts/: analoginput.py  bumper.py  omnidrive.py
src/robotino_simulations/: CMakeLists.txt  frontier.rviz  map_info.rviz  package.xml  robot_slam.rviz  robotino_rtabmap.rviz  robotinoversion1.rviz  robotinoversion2.rviz  rtab_map_slam.rviz  rtabmap_eval.py
src/robotino_simulations/config/: camera.yaml  costmap_common.yaml  costmap_global_laser.yaml  costmap_local.yaml  global_planner_params.yaml  planner.yaml
src/robotino_simulations/launch/: icpOdometry.launch  jetson.launch  launch.launch  lrf.launch  mapping.launch  move_base.launch  nodes_robotino.launch  realsenseCamera.launch  rtabmap.launch  rtabmapNode.launch  test.launch  world.launch
src/robotino_simulations/maps/: dis-B1.yaml  map2.yaml  map3.yaml
src/robotino_simulations/src/: abs_pid.py  calculate_SDF_error.cpp  calculate_map_error.cpp  convert_map.cpp  get_SDF.cpp  imu_republish.py  plot_SDF.cpp  plot_SDF_diff.cpp  pub_map_difference.cpp
src/robotino_simulations/worlds/: 3DOffice.world  cafe.world  empty.world  floor_grabcad.world  kitchen_dining.world  no_roof_small_warehouse.world  office_env_large.world  office_grabcad.world  office_sldprt.world  office_small.world  office_small6.world  robotino_arena.world  small_house.world  willow_garage.world  workshop_example.world
src/robotino_teleop/: CMakeLists.txt
src/rtabmap_ros/: CMakeLists.txt
(+103 files in other folders)
