<?xml version="1.0"?>
<package>
    <name>robotino_camera_heading</name>
    <version>0.0.0</version>
    <description>The robotino_camera_heading package</description>

      <author email="elia.bonetto@tuebingen.mpg.de">Elia Bonetto</author>
      <maintainer email="elia.bonetto@tuebingen.mpg.de">Elia Bonetto</maintainer>
      <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>octomap_msgs</build_depend>
    <build_depend>rtabmap_ros</build_depend>
    <build_depend>message_generation</build_depend>


    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>octomap_msgs</run_depend>
    <run_depend>rtabmap_ros</run_depend>
    <run_depend>message_runtime</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
