<?xml version="1.0"?>
<package>
  <name>robotino_mpc</name>
  <version>0.0.0</version>
  <description>The robotino_mpc package</description>


  <author email="elia.bonetto@tuebingen.mpg.de">Elia Bonetto</author>
  <maintainer email="elia.bonetto@tuebingen.mpg.de">Elia Bonetto</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>costmap_converter</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>robotino_fsm</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>costmap_converter</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>robotino_fsm</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
