<?xml version="1.0"?>
<package>
  <name>robotino_node</name>
  <version>0.1.0</version>
  <description>The robotino_node package</description>
  <maintainer email="v@rec.de">Christian Verbeek</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/robotino_node</url>
  <author email="v@rec.de">Christian Verbeek</author>
  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robotino_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
