<?xml version="1.0"?>
<package format="2">
  <name>robotino_rest_node</name>
  <version>0.0.0</version>
  <description>The robotino_rest_node package. Access Robotino using its REST-API provided by restapid found in robotino-daemons.
  Depends on python-requests package.
  </description>

  <maintainer email="v@rec.de">Dr. Christian Verbeek</maintainer>

  <license>BSD</license>

  <url type="website">https://wiki.openrobotino.org</url>

  <author email="v@rec.de">Dr. Christian Verbeek</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>robotino_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>robotino_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
