<?xml version="1.0"?>
<package format="2">
  <name>robotino_simulations</name>
  <version>0.0.0</version>
  <description>The robotino_simulations package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mpabst@todo.todo">mpabst</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>cmake_modules</depend>
  <depend>plotty</depend>
  <depend>pcl_ros</depend>
  <depend>glog_catkin</depend>
  <depend>grid_map_ros</depend>
  <depend>nodelet</depend>
  <depend>laser_geometry</depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
